Fixed word wrap bug when viewing a snippet.

--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ h1 {
 	font-family:Arial, Helvetica, sans-serif;
 	text-align:left;
 	line-height:20px;
+	word-wrap: break-word;
 }
 .textbox2 code {
 	display:block;
